--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 model/ResNet50V2_model_9label.keras
-model/ResNet50V2_model_t2.keras
+# model/ResNet50V2_model_t2.keras
 model/resnet50.keras
 model/efficientNetB0.keras
