--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ model/ResNet50V2_model_t2.keras
 model/resnet50.keras
 model/efficientNetB0.keras
 model/model.keras
+model/ResNet50V2_model_9label copy.keras
